--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,3 +7,4 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 set -g status-left-length 25
+set -g default-shell /opt/homebrew/bin/bash
